Omnifood project all sections added and main.css file got ready to production

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -33,17 +33,29 @@
 		font-size: 5.2rem;
 		line-height: 1.1;
 		margin-bottom: 3.2rem;
+		@include responsive(small-desktop) {
+			font-size: 4.4rem;
+		}
 	}
 	&-secondary {
 		font-size: 4.4rem;
 		margin-bottom: 9.6rem;
+		@include responsive(tab-land) {
+			font-size: 3.6rem;
+		}
+		@include responsive(tab-small) {
+			margin-bottom: 4.8rem;
+		}
 	}
 	&-tertiary {
 		font-size: 3rem;
 		line-height: 1.2;
 		margin-bottom: 3.2rem;
+		@include responsive(tab-land) {
+			font-size: 2.4rem;
+		}
 	}
-	&-footer{
+	&-footer {
 		font-size: 1.8rem;
 		font-weight: 500;
 		margin-bottom: 4rem;
