--- a/sass/global/_variables.scss
+++ b/sass/global/_variables.scss
@@ -47,6 +47,7 @@ $color-gray-4: #888888;
 $color-gray-5: #6f6f6f;
 $color-gray-6: #767676;
 $color-gray-7: #eeeeee;
+$color-gray-8: #aaaaaa;
 
 $color-accent-vegetarian: #51cf66;
 $color-accent-vegan: #94d82d;
