--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,4 +1,3 @@
-
 *,
 *::after,
 *::before {
@@ -6,13 +5,40 @@
 	margin: 0;
 	padding: 0;
 }
+*:focus {
+	outline: none;
+	box-shadow: 0 0 0 0.8rem rgba($color: $color-primary, $alpha: 0.5);
+}
+
 html {
 	font-size: 62.5%; // 1rem = 10px
 	box-sizing: border-box;
+	overflow-x: hidden;
+	//scroll-behavior: smooth;
+	@include responsive(tab-land) {
+		font-size: 56.25%;
+	}
+	@include responsive(tab-port) {
+		font-size: 50%;
+	}
 }
 body {
 	font-family: $rubik-font-family;
 	font-weight: 400;
 	line-height: 1;
 	color: $color-gray-1;
+	overflow-x: hidden;
+}
+// ! FIND A BETTER WAY
+.nav-open .nav-main {
+	opacity: 1;
+	pointer-events: auto;
+	visibility: visible;
+	transform: translateX(0);
+}
+.nav-open .mobile-navigation-button-icon[name='close-outline'] {
+	display: block;
+}
+.nav-open .mobile-navigation-button-icon[name='menu-outline'] {
+	display: none;
 }
