--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .button {
+	&,
 	&:link,
 	&:visited {
 		display: inline-block;
@@ -6,12 +7,17 @@
 		text-decoration: none;
 		padding: 1.6rem 3.2rem;
 		border-radius: 1rem;
-    font-weight: 600;
-    transition: all .3s;
+		font-weight: 600;
+		transition: all 0.3s;
+		cursor: pointer;
+		border: none;
+		@include responsive(phone-small) {
+			padding: 2.4rem 1.6rem;
+		}
 	}
 	&--full {
-    background-color: $color-primary;
-    color: $color-white;
+		background-color: $color-primary;
+		color: $color-white;
 		// &:link, &:visited {}
 		&:active,
 		&:hover {
@@ -19,15 +25,52 @@
 		}
 	}
 	&--outline {
-    background-color: $color-white;
-    color: $color-gray-1;
+		background-color: $color-white;
+		color: $color-gray-1;
 		// &:link, &:visited {}
-    &:active,
+		&:active,
 		&:hover {
 			background-color: transparent;
-      // border: 3px solid $color-white;
-      // ! to add border inside
-      box-shadow: inset 0 0 0 3px $color-white;
+			// border: 3px solid $color-white;
+			// ! to add border inside
+			box-shadow: inset 0 0 0 3px $color-white;
 		}
+	}
+	&--form {
+		background-color: $color-primary-dark-3;
+		color: $color-primary-light-9;
+		align-self: end;
+		padding: 1.2rem;
+		font-weight: 500;
+
+		&:hover,
+		&:active {
+			color: $color-primary-dark-3;
+			background-color: $color-primary-light-9;
+		}
+		@include responsive(tab-port) {
+			margin-top: 1.2rem;
+		}
+	}
+}
+.mobile-navigation-button {
+	border: none;
+	background: none;
+	cursor: pointer;
+
+	display: none;
+
+	&-icon {
+		height: 4.8rem;
+		width: 4.8rem;
+		color: $color-gray-2;
+
+		&[name='close-outline'] {
+			display: none;
+		}
+	}
+	@include responsive(tab-port) {
+		display: block;
+		z-index: 100;
 	}
 }
