--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,21 +1,56 @@
 .nav {
 	&-main {
+		@include responsive(tab-port) {
+			background-color: rgba($color-white, 0.97);
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100vh;
+			transform: translateX(100%);
+
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			transition: all 0.5s ease-out;
+
+			// ! display: none; DOES NOT Allow transitions at all.
+			// * 1) Hide it visually
+			opacity: 0;
+
+			// * 2) Make it unaccessible to mouse and keyboard
+			pointer-events: none;
+
+			// * 3) Hide it from screen readers
+			visibility: hidden;
+		}
+
 		&__list {
 			list-style: none;
 			display: flex;
-			gap: 3.2rem;
+			gap: 4.8rem;
 			font-size: 1.8rem;
 			font-weight: 500;
 			align-items: center;
 			justify-content: space-between;
+			@include responsive(tab-land) {
+				gap: 3.2rem;
+			}
+			@include responsive(tab-port) {
+				flex-direction: column;
+				gap: 4.8rem;
+			}
 		}
 		&__link {
 			&:link,
 			&:visited {
 				text-decoration: none;
-        display: inline-block;
+				display: inline-block;
 				color: $color-gray-2;
 				transition: all 0.3s;
+				@include responsive(tab-port) {
+					font-size: 3rem;
+				}
 			}
 			&:hover,
 			&:active {
@@ -36,10 +71,18 @@
 			}
 		}
 	}
-	&-footer{
+	&-footer {
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
 		gap: 2.4rem;
 	}
+}
+.sticky {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	width: 100%;
+	background-color: $color-white;
+	z-index: 9999;
 }
