--- a/sass/layout/_cta.scss
+++ b/sass/layout/_cta.scss
@@ -1,6 +1,8 @@
 .cta {
-	width: 100%;
-	height: 50vh;
+	& *:focus {
+		outline: none;
+		box-shadow: 0 0 0 0.8rem rgba($color: $color-primary-light-9, $alpha: 0.5);
+	}
 	display: grid;
 	grid-template-columns: 2fr 1fr;
 	box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
@@ -10,15 +12,84 @@
 		$color-primary-light-2,
 		$color-primary
 	);
+	overflow: hidden;
+	@include responsive(tab-port) {
+		grid-template-columns: 3fr 2fr;
+	}
+	@include responsive(phone) {
+		grid-template-columns: 1fr;
+	}
 
 	&-box {
 		&-text {
-			color: $color-primary-dark-3 !important;
+			padding: 4.8rem 6.4rem 6.4rem;
+			color: $color-primary-dark-3;
+			& .heading-secondary {
+				margin-bottom: 3.2rem;
+				color: inherit;
+			}
+			@include responsive(phone) {
+				padding: 3.2rem;
+			}
 		}
 		&-image {
-			& img {
-				width: 100%;
+			background-image: linear-gradient(
+					to right bottom,
+					rgba($color-primary-light-2, 0.35),
+					rgba($color-primary, 0.35)
+				),
+				url(../images/eating.jpg);
+			object-fit: cover;
+			background-size: cover;
+			background-position: center;
+			@include responsive(phone) {
+			grid-row: 1;
+			height: 32rem;
+		}
+		}
+	}
+
+	&-text {
+		font-size: 1.8rem;
+		line-height: 1.8;
+		margin-bottom: 4.8rem;
+	}
+	&-form {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		row-gap: 2.4rem;
+		column-gap: 3.2rem;
+		@include responsive(tab-port) {
+			grid-template-columns: 1fr;
+		}
+
+		& input,
+		& select {
+			width: 100%;
+			font-size: 1.8rem;
+			color: inherit;
+			font-family: inherit;
+			padding: 1.2rem;
+			border: none;
+			background-color: $color-primary-light-9;
+			border-radius: 1rem;
+			box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+			&:focus,
+			&:active {
+				border: none;
+				outline: none;
 			}
+		}
+		& input {
+			&::placeholder {
+				color: $color-gray-8;
+			}
+		}
+		& label {
+			display: block;
+			font-size: 1.6rem;
+			font-weight: 500;
+			margin-bottom: 1.2rem;
 		}
 	}
 }
