--- a/sass/layout/_how-it-works.scss
+++ b/sass/layout/_how-it-works.scss
@@ -4,31 +4,43 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
-      position: relative;
-      &::before, &::after{
-        content: '';
-        border-radius: 50%;
-        display: block;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
+			position: relative;
+			&::before,
+			&::after {
+				content: '';
+				border-radius: 50%;
+				display: block;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+			}
 			&::before {
-        width: 60%;
-        // ! below code provides us height = 60%
-        padding-bottom: 60%;
+				width: 60%;
+				// ! below code provides us height = 60%
+				padding-bottom: 60%;
 				background-color: $color-primary-light-9;
 				z-index: -2;
 			}
 			&::after {
-        width: 45%;
-        // ! below code provides us height = 45%
-        padding-bottom: 45%;
+				width: 45%;
+				// ! below code provides us height = 45%
+				padding-bottom: 45%;
 				background-color: $color-primary-light-8;
-        z-index: -1;
+				z-index: -1;
+			}
+			@include responsive(phone) {
+				grid-template-columns: 1fr;
+				transform: translateY(2.4rem);
+				&:nth-child(2) {
+					grid-row: 1;
+				}
+				&:nth-child(6) {
+					grid-row: 5;
+				}
 			}
 		}
+
 		&-text {
 			/* display: flex;
 			flex-direction: column;
@@ -40,12 +52,17 @@
 	}
 	&-image {
 		width: 35%;
+		@include responsive(phone) {
+		}
 	}
 	&-number {
 		font-size: 9.8rem;
 		font-weight: 600;
 		color: $color-gray-3;
 		margin-bottom: 1.2rem;
+		@include responsive(tab-port) {
+			font-size: 7.4rem;
+		}
 	}
 	&-description {
 		font-size: 1.8rem;
