--- a/sass/layout/_testimonials.scss
+++ b/sass/layout/_testimonials.scss
@@ -1,16 +1,32 @@
 .section-testimonials {
 	display: grid;
 	grid-template-columns: 55fr 45fr;
+	//grid-template-columns: 1fr 1fr;
 	align-items: center;
+	@include responsive(tab-port) {
+		grid-template-columns: 1fr;
+	}
 }
 .testimonials-container {
 	padding: 9.6rem;
+	@include responsive(tab-land) {
+		padding: 9.6rem 3.2rem;
+	}
 }
 .gallery {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	padding: 1.6rem;
 	gap: 1.6rem;
+	@include responsive(small-desktop) {
+		grid-template-columns: repeat(2, 1fr);
+	}
+	@include responsive(tab-port) {
+		grid-template-columns: repeat(6, 1fr);
+	}
+	@include responsive(phone) {
+		grid-template-columns: repeat(4, 1fr);
+	}
 
 	&-item {
 		overflow: hidden;
@@ -18,7 +34,6 @@
 		& img {
 			width: 100%;
 			display: block;
-			width: 100%;
 			transition: all 0.4s;
 			&:hover {
 				transform: scale(1.2);
@@ -31,6 +46,9 @@
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	gap: 4.8rem 8rem;
+	@include responsive(phone) {
+		grid-template-columns: 1fr;
+	}
 }
 .testimonial {
 	&-image {
