--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,14 +1,16 @@
 @import 'base/reset';
 
-@import 'global/functions';
 @import 'global/variables';
+@import 'global/functions';
 @import 'global/mixins';
+@import 'global/breakpoints';
 
 @import 'base/base';
 @import 'base/typography';
 @import 'base/utilities';
 
 @import 'components/button';
+@import 'components/link';
 @import 'components/card';
 @import 'components/navigation';
 @import 'components/list';
