--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,10 +1,31 @@
 .header {
 	background-color: $color-primary-light-9;
 }
+.sticky {
+	& .header {
+		position: fixed;
+		top: 0;
+		bottom: 0;
+		width: 100%;
+		padding-top: 0;
+		padding-bottom: 0;
+		height: 9.6rem;
+		z-index: 999;
+		background-color: rgba(255, 255, 255, 0.97);
+		//background-color: $color-primary-light-9;
+		box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+	}
+	& .section-hero {
+		margin-top: 9.6rem;
+	}
+}
 .section {
 	&-hero {
 		background-color: $color-primary-light-9;
 		padding: 4.8rem 0 9.6rem 0;
+		@include responsive(phone-small) {
+			padding: 2.4rem 0 6.4rem 0;
+		}
 	}
 	&-featured-in {
 		padding: 4.8rem 0 3.2rem 0;
@@ -22,7 +43,7 @@
 		padding: 9.6rem 0;
 	}
 	&-cta {
-		padding: 9.6rem 0;
+		padding: 4.8rem 0 12.8rem;
 		// box-shadow: ;
 	}
 }
